--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <h1>Masa lista para buñuelos...</h1>
+
+<p>Aqui ponemos los ingredientes, imagenes o lo que queramos. Hasta un video de youtube se puede y esto lo podemos modificar cuando queramos</p>
+
+<h1> y es gratis, gratiiiis!!</h1>
