--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<h1>Masa lista para buñuelos...</h1>
+<body style="background-color: beige;">
 
-<p>Aqui ponemos los ingredientes, imagenes o lo que queramos. Hasta un video de youtube se puede y esto lo podemos modificar cuando queramos</p>
+    <h1 style="font-family: Arial, Helvetica, sans-serif;">Masa lista para buñuelos</h1>
+    
+    <img src="assets/Screenshot 2024-10-03 at 8.10.54 PM.png">
+    
+</body>
 
-<h1> y es gratis, gratiiiis!!</h1>
