--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <body style="background-color: beige;">
-
-    <h1 style="font-family: Arial, Helvetica, sans-serif;">Masa lista para buñuelos</h1>
-    
-    <img src="assets/Screenshot 2024-10-03 at 8.10.54 PM.png">
+    <div style="display: flex; justify-content: center;">
+        <h1 style="font-family: Arial, Helvetica, sans-serif;">Masa lista para buñuelos</h1>
+    </div>
+    <div style="display: flex; justify-content: center;">
+            <img src="assets/Screenshot 2024-10-03 at 8.22.41 PM.png">
+    </div>
     
 </body>
 
